exports[`Component: Pagination when passed a next prop should render a next link 1`] = `
<div
  className="Pagination_2gx8tz">
  <a
    className="Pagination_link_xnow41-o_O-Pagination_next_1j0ix3o"
    href="/?q=simon&page=2"
    onClick={[Function]}
    rel="next">
    <span>
      Next
    </span>
    <svg />
  </a>
</div>
`;

exports[`Component: Pagination when passed a prev and next prop should render a previous and next link 1`] = `
<div
  className="Pagination_2gx8tz">
  <a
    className="Pagination_link_xnow41-o_O-Pagination_prev_1vqdldo"
    href="/?q=simon&page=1"
    onClick={[Function]}
    rel="prev">
    <span>
      Previous
    </span>
    <svg />
  </a>
  <a
    className="Pagination_link_xnow41-o_O-Pagination_next_1j0ix3o"
    href="/?q=simon&page=2"
    onClick={[Function]}
    rel="next">
    <span>
      Next
    </span>
    <svg />
  </a>
</div>
`;

exports[`Component: Pagination when passed a prev prop should render a previous link 1`] = `
<div
  className="Pagination_2gx8tz">
  <a
    className="Pagination_link_xnow41-o_O-Pagination_prev_1vqdldo"
    href="/?q=simon&page=1"
    onClick={[Function]}
    rel="prev">
    <span>
      Previous
    </span>
    <svg />
  </a>
</div>
`;
